<resources>
    <string name="app_name">NavigationDraw</string>

    <string name="user_name">Guido</string>
    <string name="user_email">guidocohens@gmail.com</string>

    <string name="open_drawer">Navigation Drawer is open</string>
    <string name="close_drawer">Navigation Drawer is close</string>

    <string name="home_fragment_title">Home</string>
    <string name="home_fragment_hello">¡¡Bienvenido a tu app!!</string>
    <string name="comida_fragment_title">Comida</string>
    <string name="comida_fragment_hello">¡¡Bienvenido a tu menú!!</string>
    <string name="header">Header</string>
    <string name="home_nav_menu_drawer">Home</string>
    <string name="comida_nav_menu_drawer">Comida</string>
    <string name="otros_nav_menu_drawer">Otros</string>
    <string name="perfil_nav_menu_drawer">Perfil</string>
    <string name="configuracion_nav_menu_drawer">Configuración</string>

</resources>
