<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_nav_menu_drawer" />

        <item
            android:id="@+id/nav_departures"
            android:icon="@drawable/ic_departure"
            android:title="@string/comida_nav_menu_drawer" />

    </group>

    <item android:title="@string/otros_nav_menu_drawer">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/perfil_nav_menu_drawer" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/configuracion_nav_menu_drawer" />
        </menu>
    </item>

</menu>